--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
+# Packages
+node_modules/
+package-lock.json
+
+# Log files
+logs/*
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Env
+.env
 config.json
-__temp/*.mp3
-__debug_bin
+
+# Miscellaneous
+.tmp/
+.idea/
+.DS_Store
+
+# Database
+*.sqlite
+
+# Build data
+build/
+
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
