--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 
 services:
-  app:
-    container_name: bot
+  bot:
+    container_name: main
     environment:
       - SHELL=bash
+      - NODE_ENV=production
     build:
       context: .
       dockerfile: Dockerfile
-    command: yarn start:node
