--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.11.0",
     "axios": "^0.27.2",
     "chalk": "4",
@@ -21,11 +22,14 @@
     "discord.js": "^14.2.0",
     "dokdo": "pikokr/dokdo",
     "dotenv": "^16.0.1",
+    "libsodium-wrappers": "^0.7.10",
     "node-fetch": "2",
+    "opusscript": "^0.0.8",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
   },
   "devDependencies": {
+    "@types/libsodium-wrappers": "^0",
     "@types/node": "^18.7.1",
     "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^8.3.4",
@@ -35,6 +39,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "ffmpeg": "^0.0.4",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
@@ -50,6 +55,6 @@
   "engines": {
     "node": ">=16.9"
   },
-  "packageManager": "yarn@3.1.1",
+  "packageManager": "yarn@3.2.2",
   "private": true
 }
